<resources>
    <string name="app_name">PeluchitosApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="inventario">Inventario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresartitle">Ingreso de elementos nuevos</string>
    <string name="codigo">Codigo</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="busqueda">Busqueda del inventario</string>
    <string name="ingreseNombre">Ingrese el nombre</string>
    <string name="mostrarCod">Mostrar Codigo</string>
    <string name="mostrarNom">Mostrar Nombre</string>
    <string name="mostrarCant">Mostrar Cantidad</string>
    <string name="mostrarPrec">Mostrar Precio</string>
    <string name="eliminacion">Eliminacion de Peluches</string>
    <string name="bEliminar">Eliminar</string>
    <string name="eInventario">Buscar Inventario</string>
    <string name="tinventario">Busqueda de Inventario</string>
    <string name="tBusqueda">Busqueda de Peluches</string>
    <string name="eBusqueda">Ingrese el nombre del Peluche</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_agregar">Agregar</string>
    <string name="tab_buscar">Buscar</string>
    <string name="tab_eliminar">Eliminar</string>
    <string name="tab_inventario">Inventario</string>
</resources>
